# IndusMind-AI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  implementation_plan ET_AI
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+2 more)
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py  seed.py
backend/app/ai/: __init__.py
backend/app/ai/embeddings/: __init__.py  generator.py
backend/app/ai/ner/: __init__.py  entity_extractor.py
backend/app/ai/ocr/: __init__.py  extractor.py
backend/app/ai/rag/: __init__.py  pipeline.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  deps.py  router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  chat.py  compliance.py  documents.py  equipment.py  knowledge_graph.py  maintenance.py  search.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/domain/: __init__.py  enums.py
backend/app/domain/models/: __init__.py  chunk.py  compliance.py  conversation.py  document.py  equipment.py  incident.py  knowledge_node.py  maintenance.py  user.py
backend/app/infrastructure/: __init__.py  database.py  graph_db.py  llm.py  redis.py  storage.py  vector_store.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  analytics_service.py  chat_service.py  document_service.py  knowledge_graph_service.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: conftest.py  test_health.py  test_services.py
database/: init.sql
docker/: backend.Dockerfile  docker-compose.yml
docs/: AI_PIPELINE.md  API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  KNOWLEDGE_GRAPH.md  SYSTEM_DESIGN.md
frontend/: package-lock.json  package.json
scripts/: seed.sh  setup.sh
(+19 files in other folders)
