[project]
name = "indusmind-ai-backend"
version = "1.0.0"
description = "IndusMind AI - Industrial Knowledge Intelligence Platform Backend"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",

    # Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",

    # AI / ML
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "llama-index>=0.10.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",

    # OCR & Document Processing
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",

    # Knowledge Graph
    "neo4j>=5.20.0",
    "spacy>=3.7.0",

    # Utilities
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.9.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
